[gd_scene load_steps=6 format=3 uid="uid://5fyf14qjxl7v"]

[ext_resource type="Script" path="res://demo_characters_scenes&scripts/assassin.gd" id="1_e3xh1"]
[ext_resource type="Texture2D" uid="uid://d0ppm8i6sdib5" path="res://demo_characters/assasin.png" id="2_dln2f"]
[ext_resource type="PackedScene" uid="uid://ps7oherwrlf5" path="res://character_menu.tscn" id="2_vyuan"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iy1ts"]
bg_color = Color(0.894118, 0, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w34yj"]
bg_color = Color(0, 0.635294, 0.227451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="Assassin" type="VBoxContainer"]
offset_right = 256.0
offset_bottom = 283.0
size_flags_horizontal = 6
size_flags_vertical = 4
script = ExtResource("1_e3xh1")

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_iy1ts")
theme_override_styles/fill = SubResource("StyleBoxFlat_w34yj")
show_percentage = false

[node name="Label" type="Label" parent="ProgressBar"]
clip_contents = true
layout_mode = 2
offset_top = -2.0
offset_right = 256.0
offset_bottom = 24.0
text = "hp:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_dln2f")
stretch_mode = 2

[node name="Character_Menu" parent="HBoxContainer" instance=ExtResource("2_vyuan")]
layout_mode = 2

[connection signal="mouse_entered" from="HBoxContainer/TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/TextureRect" to="." method="_on_texture_rect_mouse_exited"]
